layout shifting text fixed for mobile

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -66,4 +66,16 @@
   .Hero .left .connect .buttons {
     justify-content: center;
   }
+  .typer-cursor::before {
+    bottom: 8px;
+    height: 10%;
+    right: -9px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .typer-cursor::before {
+    bottom: 1.5vw;
+    right: -1.5vw;
+  }
 }
